syntax = "proto3";
package pt.tecnico.distledger.contract;

// Common definitions of the DistLedger Service contract

message VectorClock {
  repeated int32 values = 1;
}

enum OperationType {
  OP_UNSPECIFIED = 0;
  OP_TRANSFER_TO = 1;
  OP_CREATE_ACCOUNT = 2;
}

message Operation {
  OperationType type = 1;
  string userId = 2;
  string destUserId = 3;  // only for transferTo operations
  int32 amount = 4;  // only for transferTo operations
  VectorClock prevTS = 5; // last TS seen by initiating client
  bool stable = 6; // whether the operation has been stabilized
  bool failed = 7; // whether the operation failed executing - an operation may not fail immediately when stabilized
  VectorClock replicaTS = 8; // replica timestamp after receiving this operation
  int32 replicaId = 9; // id of the replica that received this operation
}

message LedgerState {
  repeated Operation ledger = 1;
}
